base/homer/service.yml
apiVersion: v1
kind: Service
metadata:
  name: homer
  namespace: apps
spec:
  selector:
    app: homer
  ports:
    - port: 80
      targetPort: 8080
