base/homer/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homer
  namespace: apps
spec:
  ingressClassName: traefik
  rules:
    - host: homer.lab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homer
                port:
                  number: 80
